Add chapter 4 explanation

--- a/advanced/Cross-validation.ipynb
+++ b/advanced/Cross-validation.ipynb
@@ -40,6 +40,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "scikit-learnではcross validationのための様々なクラスや関数が用意されているが、  \n",
+    "最も多用することになるのが4で紹介している`cross_val_predict`, `cross_val_score`, `GridSearchCV`である。  \n",
+    "これらをまずデフォルトで使い、慣れてきたら1や2で紹介しているcross validationを引数として与えてよりよいcross validationを行うと良い。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 1. K-fold cross validationのための様々なクラスや関数"
    ]
   },
@@ -73,9 +82,9 @@
       "TRAIN: [0 1 4 5] VALIDATION: [2 3]\n",
       "TRAIN: [0 1 2 3] VALIDATION: [4 5]\n",
       "KFold(n_splits=3, random_state=None, shuffle=True)\n",
-      "TRAIN: [0 1 3 5] VALIDATION: [2 4]\n",
       "TRAIN: [1 2 3 4] VALIDATION: [0 5]\n",
-      "TRAIN: [0 2 4 5] VALIDATION: [1 3]\n"
+      "TRAIN: [0 2 3 5] VALIDATION: [1 4]\n",
+      "TRAIN: [0 1 4 5] VALIDATION: [2 3]\n"
      ]
     }
    ],
@@ -160,9 +169,9 @@
      "output_type": "stream",
      "text": [
       "ShuffleSplit(n_splits=3, random_state=None, test_size=0.5, train_size=0.5)\n",
-      "TRAIN: [3 4 2] VALIDATION: [0 5 1]\n",
-      "TRAIN: [0 2 5] VALIDATION: [3 1 4]\n",
-      "TRAIN: [5 3 1] VALIDATION: [4 2 0]\n"
+      "TRAIN: [2 1 0] VALIDATION: [3 4 5]\n",
+      "TRAIN: [2 1 3] VALIDATION: [4 5 0]\n",
+      "TRAIN: [1 0 4] VALIDATION: [2 5 3]\n"
      ]
     }
    ],
@@ -257,10 +266,10 @@
       "TRAIN: [2 3 6 7] VALIDATION: [0 1 4 5]\n",
       "TRAIN: [0 1 4 5] VALIDATION: [2 3 6 7]\n",
       "StratifiedKFold(n_splits=4, random_state=None, shuffle=True)\n",
-      "TRAIN: [0 2 3 4 6 7] VALIDATION: [1 5]\n",
+      "TRAIN: [0 1 2 4 6 7] VALIDATION: [3 5]\n",
+      "TRAIN: [1 2 3 4 5 6] VALIDATION: [0 7]\n",
       "TRAIN: [0 1 3 4 5 7] VALIDATION: [2 6]\n",
-      "TRAIN: [1 2 3 5 6 7] VALIDATION: [0 4]\n",
-      "TRAIN: [0 1 2 4 5 6] VALIDATION: [3 7]\n"
+      "TRAIN: [0 2 3 5 6 7] VALIDATION: [1 4]\n"
      ]
     }
    ],
@@ -313,8 +322,8 @@
       "TRAIN: [2 1 4 7] VALIDATION: [3 6 5 0]\n",
       "StratifiedShuffleSplit(n_splits=2, random_state=None, test_size=0.25,\n",
       "            train_size=None)\n",
-      "TRAIN: [0 4 1 3 5 7] VALIDATION: [2 6]\n",
-      "TRAIN: [7 5 2 1 4 0] VALIDATION: [3 6]\n"
+      "TRAIN: [3 7 2 1 5 6] VALIDATION: [4 0]\n",
+      "TRAIN: [7 5 4 0 3 2] VALIDATION: [1 6]\n"
      ]
     }
    ],
@@ -809,7 +818,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "この性質を利用してfoldごとにモデルを構築し予測するスクリプトは以下のようになる。"
+    "この性質を利用してfoldごとにモデルを構築し予測するスクリプトは以下のようになる。SVCはSVMによるクラス分類を行うクラスである。"
    ]
   },
   {
@@ -978,7 +987,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "引数cvにStratifiedKFoldクラスをあたえることで目的変数の各クラスの割合を考慮したTraining set set, Validation set setを作成したk-fold cross validationを行い、<br>その予測値の正答率を求めてみる。"
+    "cross_val_predict, cross_val_score, GridSearchCVの引数cvにintを指定するとその値のK-Fold cross validationを行う。   \n",
+    "さらにクラス分類の場合はK-Fold StratifiedKFoldでデータを分割しcross validationを行う。  \n",
+    "例えば以下の例では`cv=10`としているので10-fold cross validationを行う。"
    ]
   },
   {
@@ -999,6 +1010,45 @@
     }
    ],
    "source": [
+    "svc = svm.SVC()\n",
+    "scores = cross_val_score(svc, X_iris, y_iris, cv=10)\n",
+    "scores"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "求められたscoresは3の最後に示したスクリプト( In[17] ) で得られた正答率と同じになっている。  \n",
+    "したがってcross_val_scoreを用いることで簡単に同じ工程を行うことができるといえる。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "引数cvにintではなくStratifiedKFoldクラスなどのFoldのクラスをあたえることで目的変数の各クラスの割合を考慮した  \n",
+    "Training set set, Validation set setを作成したk-fold cross validationを行い、その予測値の正答率を求めてくれる。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1.        ,  0.93333333,  1.        ,  1.        ,  1.        ,\n",
+       "        0.93333333,  0.93333333,  1.        ,  1.        ,  1.        ])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "skf = StratifiedKFold(n_splits=10)\n",
     "svc = svm.SVC()\n",
     "scores = cross_val_score(svc, X_iris, y_iris, cv=skf)\n",
@@ -1009,8 +1059,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "求められたscoresは3の最後に示したスクリプト( In[17] ) で得られた正答率と同じになっている。<br>\n",
-    "したがってcross_val_scoreを用いることで簡単に同じ工程を行うことができるといえる。"
+    "求められたscoresは3の最後に示したスクリプト( In[17], In[25] ) で得られた正答率と同じになっている。<br>\n",
+    "以上のことよりcross_val_scoreの引数cvをうまく用いることで自分が望むcross validationを簡単に行うことができるといえる。"
    ]
   },
   {
@@ -1029,7 +1079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1088,8 +1138,8 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.002061</td>\n",
-       "      <td>0.000893</td>\n",
+       "      <td>0.002394</td>\n",
+       "      <td>0.000743</td>\n",
        "      <td>0.980000</td>\n",
        "      <td>0.989998</td>\n",
        "      <td>1</td>\n",
@@ -1102,15 +1152,15 @@
        "      <td>1.0</td>\n",
        "      <td>0.979167</td>\n",
        "      <td>0.990196</td>\n",
-       "      <td>0.000509</td>\n",
-       "      <td>0.000340</td>\n",
+       "      <td>0.001029</td>\n",
+       "      <td>0.000261</td>\n",
        "      <td>0.016179</td>\n",
        "      <td>0.008249</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.001365</td>\n",
-       "      <td>0.000518</td>\n",
+       "      <td>0.004125</td>\n",
+       "      <td>0.001150</td>\n",
        "      <td>0.973333</td>\n",
        "      <td>0.983363</td>\n",
        "      <td>1</td>\n",
@@ -1123,15 +1173,15 @@
        "      <td>1.0</td>\n",
        "      <td>0.979167</td>\n",
        "      <td>0.980392</td>\n",
-       "      <td>0.000149</td>\n",
-       "      <td>0.000259</td>\n",
+       "      <td>0.000370</td>\n",
+       "      <td>0.000160</td>\n",
        "      <td>0.009021</td>\n",
        "      <td>0.012548</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.001437</td>\n",
-       "      <td>0.000270</td>\n",
+       "      <td>0.001152</td>\n",
+       "      <td>0.000363</td>\n",
        "      <td>0.966667</td>\n",
        "      <td>0.983363</td>\n",
        "      <td>5</td>\n",
@@ -1144,15 +1194,15 @@
        "      <td>1.0</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>0.980392</td>\n",
-       "      <td>0.000560</td>\n",
-       "      <td>0.000024</td>\n",
+       "      <td>0.000215</td>\n",
+       "      <td>0.000099</td>\n",
        "      <td>0.046442</td>\n",
        "      <td>0.012548</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0.000919</td>\n",
-       "      <td>0.000289</td>\n",
+       "      <td>0.002128</td>\n",
+       "      <td>0.000806</td>\n",
        "      <td>0.980000</td>\n",
        "      <td>0.983363</td>\n",
        "      <td>5</td>\n",
@@ -1165,15 +1215,15 @@
        "      <td>1.0</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>0.980392</td>\n",
-       "      <td>0.000080</td>\n",
-       "      <td>0.000014</td>\n",
+       "      <td>0.000817</td>\n",
+       "      <td>0.000309</td>\n",
        "      <td>0.015925</td>\n",
        "      <td>0.012548</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0.000831</td>\n",
-       "      <td>0.000346</td>\n",
+       "      <td>0.002020</td>\n",
+       "      <td>0.000460</td>\n",
        "      <td>0.973333</td>\n",
        "      <td>0.979996</td>\n",
        "      <td>10</td>\n",
@@ -1186,15 +1236,15 @@
        "      <td>1.0</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>0.980392</td>\n",
-       "      <td>0.000041</td>\n",
-       "      <td>0.000074</td>\n",
+       "      <td>0.000762</td>\n",
+       "      <td>0.000159</td>\n",
        "      <td>0.037154</td>\n",
        "      <td>0.016497</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>0.000871</td>\n",
-       "      <td>0.000309</td>\n",
+       "      <td>0.001791</td>\n",
+       "      <td>0.000729</td>\n",
        "      <td>0.980000</td>\n",
        "      <td>0.979996</td>\n",
        "      <td>10</td>\n",
@@ -1207,8 +1257,8 @@
        "      <td>1.0</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>0.980392</td>\n",
-       "      <td>0.000027</td>\n",
-       "      <td>0.000048</td>\n",
+       "      <td>0.000688</td>\n",
+       "      <td>0.000512</td>\n",
        "      <td>0.015925</td>\n",
        "      <td>0.016497</td>\n",
        "    </tr>\n",
@@ -1218,12 +1268,12 @@
       ],
       "text/plain": [
        "   mean_fit_time  mean_score_time  mean_test_score  mean_train_score param_C  \\\n",
-       "0       0.002061         0.000893         0.980000          0.989998       1   \n",
-       "1       0.001365         0.000518         0.973333          0.983363       1   \n",
-       "2       0.001437         0.000270         0.966667          0.983363       5   \n",
-       "3       0.000919         0.000289         0.980000          0.983363       5   \n",
-       "4       0.000831         0.000346         0.973333          0.979996      10   \n",
-       "5       0.000871         0.000309         0.980000          0.979996      10   \n",
+       "0       0.002394         0.000743         0.980000          0.989998       1   \n",
+       "1       0.004125         0.001150         0.973333          0.983363       1   \n",
+       "2       0.001152         0.000363         0.966667          0.983363       5   \n",
+       "3       0.002128         0.000806         0.980000          0.983363       5   \n",
+       "4       0.002020         0.000460         0.973333          0.979996      10   \n",
+       "5       0.001791         0.000729         0.980000          0.979996      10   \n",
        "\n",
        "  param_kernel                         params  rank_test_score  \\\n",
        "0       linear   {'C': 1, 'kernel': 'linear'}                1   \n",
@@ -1242,23 +1292,23 @@
        "5           0.980392            0.959596           0.960784   \n",
        "\n",
        "   split1_train_score  split2_test_score  split2_train_score  std_fit_time  \\\n",
-       "0                 1.0           0.979167            0.990196      0.000509   \n",
-       "1                 1.0           0.979167            0.980392      0.000149   \n",
-       "2                 1.0           1.000000            0.980392      0.000560   \n",
-       "3                 1.0           1.000000            0.980392      0.000080   \n",
-       "4                 1.0           1.000000            0.980392      0.000041   \n",
-       "5                 1.0           1.000000            0.980392      0.000027   \n",
+       "0                 1.0           0.979167            0.990196      0.001029   \n",
+       "1                 1.0           0.979167            0.980392      0.000370   \n",
+       "2                 1.0           1.000000            0.980392      0.000215   \n",
+       "3                 1.0           1.000000            0.980392      0.000817   \n",
+       "4                 1.0           1.000000            0.980392      0.000762   \n",
+       "5                 1.0           1.000000            0.980392      0.000688   \n",
        "\n",
        "   std_score_time  std_test_score  std_train_score  \n",
-       "0        0.000340        0.016179         0.008249  \n",
-       "1        0.000259        0.009021         0.012548  \n",
-       "2        0.000024        0.046442         0.012548  \n",
-       "3        0.000014        0.015925         0.012548  \n",
-       "4        0.000074        0.037154         0.016497  \n",
-       "5        0.000048        0.015925         0.016497  "
+       "0        0.000261        0.016179         0.008249  \n",
+       "1        0.000160        0.009021         0.012548  \n",
+       "2        0.000099        0.046442         0.012548  \n",
+       "3        0.000309        0.015925         0.012548  \n",
+       "4        0.000159        0.037154         0.016497  \n",
+       "5        0.000512        0.015925         0.016497  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1298,7 +1348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1324,7 +1374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1335,8 +1385,8 @@
       "TRAIN: [4 5 6 7] VALIDATION: [0 1 2 3]\n",
       "TRAIN: [0 1 2 3] VALIDATION: [4 5 6 7]\n",
       "sklearn.cross_validation.KFold(n=8, n_folds=2, shuffle=True, random_state=None)\n",
-      "TRAIN: [0 1 4 5] VALIDATION: [2 3 6 7]\n",
-      "TRAIN: [2 3 6 7] VALIDATION: [0 1 4 5]\n"
+      "TRAIN: [0 2 6 7] VALIDATION: [1 3 4 5]\n",
+      "TRAIN: [1 3 4 5] VALIDATION: [0 2 6 7]\n"
      ]
     }
    ],
