--- a/advanced/Cross-validation.ipynb
+++ b/advanced/Cross-validation.ipynb
@@ -83,8 +83,8 @@
       "TRAIN: [0 1 2 3] VALIDATION: [4 5]\n",
       "KFold(n_splits=3, random_state=None, shuffle=True)\n",
       "TRAIN: [1 2 3 4] VALIDATION: [0 5]\n",
-      "TRAIN: [0 2 3 5] VALIDATION: [1 4]\n",
-      "TRAIN: [0 1 4 5] VALIDATION: [2 3]\n"
+      "TRAIN: [0 1 4 5] VALIDATION: [2 3]\n",
+      "TRAIN: [0 2 3 5] VALIDATION: [1 4]\n"
      ]
     }
    ],
@@ -169,9 +169,9 @@
      "output_type": "stream",
      "text": [
       "ShuffleSplit(n_splits=3, random_state=None, test_size=0.5, train_size=0.5)\n",
-      "TRAIN: [2 1 0] VALIDATION: [3 4 5]\n",
-      "TRAIN: [2 1 3] VALIDATION: [4 5 0]\n",
-      "TRAIN: [1 0 4] VALIDATION: [2 5 3]\n"
+      "TRAIN: [0 5 3] VALIDATION: [2 4 1]\n",
+      "TRAIN: [1 0 2] VALIDATION: [3 5 4]\n",
+      "TRAIN: [1 3 5] VALIDATION: [0 4 2]\n"
      ]
     }
    ],
@@ -266,10 +266,10 @@
       "TRAIN: [2 3 6 7] VALIDATION: [0 1 4 5]\n",
       "TRAIN: [0 1 4 5] VALIDATION: [2 3 6 7]\n",
       "StratifiedKFold(n_splits=4, random_state=None, shuffle=True)\n",
-      "TRAIN: [0 1 2 4 6 7] VALIDATION: [3 5]\n",
-      "TRAIN: [1 2 3 4 5 6] VALIDATION: [0 7]\n",
+      "TRAIN: [0 2 3 4 6 7] VALIDATION: [1 5]\n",
       "TRAIN: [0 1 3 4 5 7] VALIDATION: [2 6]\n",
-      "TRAIN: [0 2 3 5 6 7] VALIDATION: [1 4]\n"
+      "TRAIN: [0 1 2 4 5 6] VALIDATION: [3 7]\n",
+      "TRAIN: [1 2 3 5 6 7] VALIDATION: [0 4]\n"
      ]
     }
    ],
@@ -322,8 +322,8 @@
       "TRAIN: [2 1 4 7] VALIDATION: [3 6 5 0]\n",
       "StratifiedShuffleSplit(n_splits=2, random_state=None, test_size=0.25,\n",
       "            train_size=None)\n",
-      "TRAIN: [3 7 2 1 5 6] VALIDATION: [4 0]\n",
-      "TRAIN: [7 5 4 0 3 2] VALIDATION: [1 6]\n"
+      "TRAIN: [1 4 0 2 5 6] VALIDATION: [3 7]\n",
+      "TRAIN: [7 2 6 3 1 5] VALIDATION: [0 4]\n"
      ]
     }
    ],
@@ -506,19 +506,6 @@
      "data": {
       "text/html": [
        "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -1098,19 +1085,6 @@
      "data": {
       "text/html": [
        "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -1138,8 +1112,8 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.002394</td>\n",
-       "      <td>0.000743</td>\n",
+       "      <td>0.002166</td>\n",
+       "      <td>0.000673</td>\n",
        "      <td>0.980000</td>\n",
        "      <td>0.989998</td>\n",
        "      <td>1</td>\n",
@@ -1152,15 +1126,15 @@
        "      <td>1.0</td>\n",
        "      <td>0.979167</td>\n",
        "      <td>0.990196</td>\n",
-       "      <td>0.001029</td>\n",
-       "      <td>0.000261</td>\n",
+       "      <td>0.000655</td>\n",
+       "      <td>0.000349</td>\n",
        "      <td>0.016179</td>\n",
        "      <td>0.008249</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.004125</td>\n",
-       "      <td>0.001150</td>\n",
+       "      <td>0.002341</td>\n",
+       "      <td>0.000843</td>\n",
        "      <td>0.973333</td>\n",
        "      <td>0.983363</td>\n",
        "      <td>1</td>\n",
@@ -1173,15 +1147,15 @@
        "      <td>1.0</td>\n",
        "      <td>0.979167</td>\n",
        "      <td>0.980392</td>\n",
-       "      <td>0.000370</td>\n",
-       "      <td>0.000160</td>\n",
+       "      <td>0.001603</td>\n",
+       "      <td>0.000388</td>\n",
        "      <td>0.009021</td>\n",
        "      <td>0.012548</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.001152</td>\n",
-       "      <td>0.000363</td>\n",
+       "      <td>0.001325</td>\n",
+       "      <td>0.000283</td>\n",
        "      <td>0.966667</td>\n",
        "      <td>0.983363</td>\n",
        "      <td>5</td>\n",
@@ -1194,15 +1168,15 @@
        "      <td>1.0</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>0.980392</td>\n",
-       "      <td>0.000215</td>\n",
-       "      <td>0.000099</td>\n",
+       "      <td>0.000148</td>\n",
+       "      <td>0.000024</td>\n",
        "      <td>0.046442</td>\n",
        "      <td>0.012548</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0.002128</td>\n",
-       "      <td>0.000806</td>\n",
+       "      <td>0.001332</td>\n",
+       "      <td>0.000308</td>\n",
        "      <td>0.980000</td>\n",
        "      <td>0.983363</td>\n",
        "      <td>5</td>\n",
@@ -1215,15 +1189,15 @@
        "      <td>1.0</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>0.980392</td>\n",
-       "      <td>0.000817</td>\n",
-       "      <td>0.000309</td>\n",
+       "      <td>0.000151</td>\n",
+       "      <td>0.000015</td>\n",
        "      <td>0.015925</td>\n",
        "      <td>0.012548</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0.002020</td>\n",
-       "      <td>0.000460</td>\n",
+       "      <td>0.000982</td>\n",
+       "      <td>0.000254</td>\n",
        "      <td>0.973333</td>\n",
        "      <td>0.979996</td>\n",
        "      <td>10</td>\n",
@@ -1236,15 +1210,15 @@
        "      <td>1.0</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>0.980392</td>\n",
-       "      <td>0.000762</td>\n",
-       "      <td>0.000159</td>\n",
+       "      <td>0.000030</td>\n",
+       "      <td>0.000001</td>\n",
        "      <td>0.037154</td>\n",
        "      <td>0.016497</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>0.001791</td>\n",
-       "      <td>0.000729</td>\n",
+       "      <td>0.001169</td>\n",
+       "      <td>0.000304</td>\n",
        "      <td>0.980000</td>\n",
        "      <td>0.979996</td>\n",
        "      <td>10</td>\n",
@@ -1257,8 +1231,8 @@
        "      <td>1.0</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>0.980392</td>\n",
-       "      <td>0.000688</td>\n",
-       "      <td>0.000512</td>\n",
+       "      <td>0.000195</td>\n",
+       "      <td>0.000033</td>\n",
        "      <td>0.015925</td>\n",
        "      <td>0.016497</td>\n",
        "    </tr>\n",
@@ -1268,12 +1242,12 @@
       ],
       "text/plain": [
        "   mean_fit_time  mean_score_time  mean_test_score  mean_train_score param_C  \\\n",
-       "0       0.002394         0.000743         0.980000          0.989998       1   \n",
-       "1       0.004125         0.001150         0.973333          0.983363       1   \n",
-       "2       0.001152         0.000363         0.966667          0.983363       5   \n",
-       "3       0.002128         0.000806         0.980000          0.983363       5   \n",
-       "4       0.002020         0.000460         0.973333          0.979996      10   \n",
-       "5       0.001791         0.000729         0.980000          0.979996      10   \n",
+       "0       0.002166         0.000673         0.980000          0.989998       1   \n",
+       "1       0.002341         0.000843         0.973333          0.983363       1   \n",
+       "2       0.001325         0.000283         0.966667          0.983363       5   \n",
+       "3       0.001332         0.000308         0.980000          0.983363       5   \n",
+       "4       0.000982         0.000254         0.973333          0.979996      10   \n",
+       "5       0.001169         0.000304         0.980000          0.979996      10   \n",
        "\n",
        "  param_kernel                         params  rank_test_score  \\\n",
        "0       linear   {'C': 1, 'kernel': 'linear'}                1   \n",
@@ -1292,20 +1266,20 @@
        "5           0.980392            0.959596           0.960784   \n",
        "\n",
        "   split1_train_score  split2_test_score  split2_train_score  std_fit_time  \\\n",
-       "0                 1.0           0.979167            0.990196      0.001029   \n",
-       "1                 1.0           0.979167            0.980392      0.000370   \n",
-       "2                 1.0           1.000000            0.980392      0.000215   \n",
-       "3                 1.0           1.000000            0.980392      0.000817   \n",
-       "4                 1.0           1.000000            0.980392      0.000762   \n",
-       "5                 1.0           1.000000            0.980392      0.000688   \n",
+       "0                 1.0           0.979167            0.990196      0.000655   \n",
+       "1                 1.0           0.979167            0.980392      0.001603   \n",
+       "2                 1.0           1.000000            0.980392      0.000148   \n",
+       "3                 1.0           1.000000            0.980392      0.000151   \n",
+       "4                 1.0           1.000000            0.980392      0.000030   \n",
+       "5                 1.0           1.000000            0.980392      0.000195   \n",
        "\n",
        "   std_score_time  std_test_score  std_train_score  \n",
-       "0        0.000261        0.016179         0.008249  \n",
-       "1        0.000160        0.009021         0.012548  \n",
-       "2        0.000099        0.046442         0.012548  \n",
-       "3        0.000309        0.015925         0.012548  \n",
-       "4        0.000159        0.037154         0.016497  \n",
-       "5        0.000512        0.015925         0.016497  "
+       "0        0.000349        0.016179         0.008249  \n",
+       "1        0.000388        0.009021         0.012548  \n",
+       "2        0.000024        0.046442         0.012548  \n",
+       "3        0.000015        0.015925         0.012548  \n",
+       "4        0.000001        0.037154         0.016497  \n",
+       "5        0.000033        0.015925         0.016497  "
       ]
      },
      "execution_count": 22,
@@ -1341,7 +1315,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "scikit-learn version2.0で廃止される予定だがcross_validationモジュールを使用してもcross validationを行うことができる。<br>\n",
+    "scikit-learn version0.20で廃止される予定だがcross_validationモジュールを使用してもcross validationを行うことができる。<br>\n",
     "例えばcross_validationモジュールの[KFold](http://scikit-learn.org/0.16/modules/generated/sklearn.cross_validation.KFold.html#sklearn.cross_validation.KFold)クラスを用いることでKFold cross validationを行うことができる。\n",
     "<br>shuffle=True, random_state=Noneとすることでランダムにすることができる。"
    ]
@@ -1368,7 +1342,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "上記の赤枠ででている英文はversion 0.2になるとcross_validationモジュールは廃止されることを説明している。<br>\n",
+    "上記の赤枠ででている英文はversion 0.20になるとcross_validationモジュールは廃止されることを説明している。<br>\n",
+    "(ちなみに今回の入門講座の仮想環境でのversionは0.18.2である)  \n",
     "したがって新たに学ぶなら1〜4章で説明したモジュールの関数やクラスを学んだ方が良い。"
    ]
   },
@@ -1385,8 +1360,8 @@
       "TRAIN: [4 5 6 7] VALIDATION: [0 1 2 3]\n",
       "TRAIN: [0 1 2 3] VALIDATION: [4 5 6 7]\n",
       "sklearn.cross_validation.KFold(n=8, n_folds=2, shuffle=True, random_state=None)\n",
-      "TRAIN: [0 2 6 7] VALIDATION: [1 3 4 5]\n",
-      "TRAIN: [1 3 4 5] VALIDATION: [0 2 6 7]\n"
+      "TRAIN: [1 4 5 7] VALIDATION: [0 2 3 6]\n",
+      "TRAIN: [0 2 3 6] VALIDATION: [1 4 5 7]\n"
      ]
     }
    ],
